--- a/example/GradBoost Notebook.ipynb
+++ b/example/GradBoost Notebook.ipynb
@@ -734,7 +734,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At 100 boosting rounds, the Boosted Ridge Regression performs almost close to the multiple linear regression, which represents the true model (plus a couple noise variables that should be dropped out). Turns out, sometimes throwing algorithms at a problem works. Still, it's better to know your data.\n",
+    "At 100 boosting rounds, the Boosted Ridge Regression performs close to the multiple linear regression, which represents the true model (plus a couple noise variables that should be dropped out). Turns out, sometimes throwing algorithms at a problem works. Still, it's better to know your data.\n",
     "\n",
     "I hope this article has given you a better idea of what is going on under the hood of one of the most powerful machine learning techniques. Now you can think about what your computer is doing while you go get coffee and wait for your grid search to finish."
    ]
